--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>">
+  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+  <link rel="stylesheet" href=
+  "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
+  </link>
 </head>
 
 <body>
@@ -66,6 +70,28 @@
             <tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <!-- <heading>Publications & Preprints</heading> -->
+                <heading>Education</heading>
+                <ul style="list-style-type: none;">
+                  <li style="margin-bottom: 10px;"><span class="fas"><i class="fas fa-graduation-cap"></i></span> Robotics Master's Thesis, ETH Zurich </li>
+                  <li style="margin-bottom: 10px;"><span class="fas"><i class="fas fa-graduation-cap"></i></span> Graduate Exchange Studies, University of Waterloo </li>
+                  <li style="margin-bottom: 10px;"><span class="fas"><i class="fas fa-graduation-cap"></i></span> MSc in Information and Computer Engineering, Graz University of Technology </li>
+                  <li style="margin-bottom: 10px;"><span class="fas"><i class="fas fa-graduation-cap"></i></span> BSc in Electrical Engineering, Graz University of Technology </li>
+                </ul>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        
+        
+
+
+        <!-- Papers Header -->
+        <table
+          style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <tbody>
+            <tr>
+              <td style="padding:20px;width:100%;vertical-align:middle">
+                <!-- <heading>Publications & Preprints</heading> -->
                 <heading>Projects</heading>
               </td>
             </tr>
@@ -109,7 +135,7 @@
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='drone_image'>
+                <div class="two" id='psr_image'>
                   <img src='images/psr_example.png' width="200"></div>
                 <img src='images/psr_example.png' width="200">
               </div>
