update thesis papers

--- a/index.html
+++ b/index.html
@@ -83,6 +83,26 @@
         </table>
         
         
+        <table
+          style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <tbody>
+            <tr>
+              <td style="padding:20px;width:100%;vertical-align:middle">
+                <!-- <heading>Publications & Preprints</heading> -->
+                <heading>Papers</heading>
+                <ul style="list-style-type: none;">
+                  <li style="margin-bottom: 0px;"><span class="fas"><i class="fas fa-scroll"></i></span> IROS’23 Submission: </li>
+                  <li style="margin-bottom: 0px;">”Learning to Open Doors with Physically Interacting Aerial Manipulators” </li>
+                  <li style="margin-bottom: 10px;">Authors: Eugenio Cuniato, Ismail Geles, Weixuan Zhang, Olov Andersson, Marco Tognon, Roland Siegwart </li>            
+                  <li style="margin-bottom: 0px;"><span class="fas"><i class="fas fa-scroll"></i></span> ECMR’23 Submission: </li>
+                  <li style="margin-bottom: 0px;">”GAFAR: Graph‑Attention Feature‑Augmentation for Registration</li>
+                  <li style="margin-bottom: 0px;">A Fast and Light‑weight Point Set Registration Algorithm” </li>
+                  <li style="margin-bottom: 10px;">Authors: Ludwig Mohr, Ismail Geles, Friedrich Fraundorfer </li>            
+                </ul>
+              </td>
+            </tr>
+          </tbody>
+        </table>
 
 
         <!-- Papers Header -->
@@ -110,7 +130,7 @@
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              (Ongoing) <papertitle> Reinforcement Learning for Aerial Manipulation of Articulated Objects </papertitle>
+              <papertitle> Reinforcement Learning for Aerial Manipulation of Articulated Objects </papertitle>
               <br>
               <!-- strong>Ismail Geles</strong -->
               <br>
@@ -119,9 +139,13 @@
               Supervisors: Eugenio Cuniato, Dr. Olov Andersson, Dr. Weixuan Zhang, Dr. Marco Tognon, Prof. Daniel Watzenig, Prof. Roland Siegwart
               <p>
               <!--  <a href="todo">project page</a> -->
-              PDF (not available yet)
+              <a href="https://drive.google.com/file/d/1_LFsdO6Z0SNKmFysotHB8LS6LAm3eLmM/view">
+                PDF </a>
               /
-              code (not available yet)
+              code (not public)
+              /
+              <a href="https://docs.google.com/presentation/d/1_lJnh5OrlXLBpm7l5SpGB6g1LRqvgio8NBTIgNhYLWg/edit">
+                slides </a>
               </p>
               <p>
               <p>
