--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
               Supervised by Prof. Friedrich Fraundorfer
               <p>
               <!--  <a href="todo">project page</a> -->
-              <a href="https://drive.google.com/file/d/15mwJQUpOGvbFMhiFAoKthQdF5CJepnkr/view">
-              PDF </a>
+              PDF (not public)
               /
               code (not public)
               </p>
