--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
                 <name>Ismail Geles</name>
               </p>
               <p>
-                I am a Master's student at the <a href="https://www.tugraz.at">Graz University of Technology</a> in Information and Computer Engineering, focusing on AI, Computer Vision and Robotics.
+                I recently started as Research Assistant / PhD Student at the <a href="https://rpg.ifi.uzh.ch/">Robotics and Perception Group</a> at ETH/UZH Zurich.
               </p>
               <p>
-                I am currently writing my Master's thesis at the <a href="https://www.asl.ethz.ch"> Autonomous Systems Lab (ASL)</a> at the Swiss Federal Institute of Technology 
+                In 2023 I completed my Master's at <a href="https://www.tugraz.at">Graz University of Technology</a> in Information and Computer Engineering, focusing on AI, Computer Vision and Robotics.
+              </p>
+              <p>
+                For my Master's thesis I was working at the <a href="https://www.asl.ethz.ch"> Autonomous Systems Lab (ASL)</a>, Swiss Federal Institute of Technology 
                 <a href="https://www.ethz.ch/en">ETH Zurich</a> on the topic of aerial manipulation through Reinforcement Learning.
               </p>
               <p>  
@@ -72,6 +75,7 @@
                 <!-- <heading>Publications & Preprints</heading> -->
                 <heading>Education</heading>
                 <ul style="list-style-type: none;">
+                  <li style="margin-bottom: 10px;"><span class="fas"><i class="fas fa-graduation-cap"></i></span> Research Assistant, ETH/UZH Zurich </li>
                   <li style="margin-bottom: 10px;"><span class="fas"><i class="fas fa-graduation-cap"></i></span> Robotics Master's Thesis, ETH Zurich </li>
                   <li style="margin-bottom: 10px;"><span class="fas"><i class="fas fa-graduation-cap"></i></span> Graduate Exchange Studies, University of Waterloo </li>
                   <li style="margin-bottom: 10px;"><span class="fas"><i class="fas fa-graduation-cap"></i></span> MSc in Information and Computer Engineering, Graz University of Technology </li>
@@ -91,10 +95,10 @@
                 <!-- <heading>Publications & Preprints</heading> -->
                 <heading>Papers</heading>
                 <ul style="list-style-type: none;">
-                  <li style="margin-bottom: 0px;"><span class="fas"><i class="fas fa-scroll"></i></span> IROS’23 Submission: </li>
+                  <li style="margin-bottom: 0px;"><span class="fas"><i class="fas fa-scroll"></i></span> IROS’23 </li>
                   <li style="margin-bottom: 0px;">”Learning to Open Doors with Physically Interacting Aerial Manipulators” </li>
                   <li style="margin-bottom: 10px;">Authors: Eugenio Cuniato, Ismail Geles, Weixuan Zhang, Olov Andersson, Marco Tognon, Roland Siegwart </li>            
-                  <li style="margin-bottom: 0px;"><span class="fas"><i class="fas fa-scroll"></i></span> ECMR’23 Submission: </li>
+                  <li style="margin-bottom: 0px;"><span class="fas"><i class="fas fa-scroll"></i></span> ECMR’23 </li>
                   <li style="margin-bottom: 0px;">”GAFAR: Graph‑Attention Feature‑Augmentation for Registration</li>
                   <li style="margin-bottom: 0px;">A Fast and Light‑weight Point Set Registration Algorithm” </li>
                   <li style="margin-bottom: 10px;">Authors: Ludwig Mohr, Ismail Geles, Friedrich Fraundorfer </li>            
