--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 I recently started as Research Assistant / PhD Student at the <a href="https://rpg.ifi.uzh.ch/">Robotics and Perception Group</a> at ETH/UZH Zurich.
               </p>
               <p>
-                In 2023 I completed my Master's at <a href="https://www.tugraz.at">Graz University of Technology</a> in Information and Computer Engineering, focusing on AI, Computer Vision and Robotics.
+                In 2023, I completed my Master's at <a href="https://www.tugraz.at">Graz University of Technology</a> in Information and Computer Engineering, focusing on AI, Computer Vision and Robotics.
               </p>
               <p>
                 For my Master's thesis I was working at the <a href="https://www.asl.ethz.ch"> Autonomous Systems Lab (ASL)</a>, Swiss Federal Institute of Technology 
