--- a/index.html
+++ b/index.html
@@ -96,11 +96,10 @@
                 <heading>Papers</heading>
                 <ul style="list-style-type: none;">
                   <li style="margin-bottom: 0px;"><span class="fas"><i class="fas fa-scroll"></i></span> IROS’23 </li>
-                  <li style="margin-bottom: 0px;">”Learning to Open Doors with Physically Interacting Aerial Manipulators” </li>
+                  <li style="margin-bottom: 0px;"> <a href="https://arxiv.org/abs/2307.15581">”Learning to Open Doors with Physically Interacting Aerial Manipulators”</a> </li>
                   <li style="margin-bottom: 10px;">Authors: Eugenio Cuniato, Ismail Geles, Weixuan Zhang, Olov Andersson, Marco Tognon, Roland Siegwart </li>            
                   <li style="margin-bottom: 0px;"><span class="fas"><i class="fas fa-scroll"></i></span> ECMR’23 </li>
-                  <li style="margin-bottom: 0px;">”GAFAR: Graph‑Attention Feature‑Augmentation for Registration</li>
-                  <li style="margin-bottom: 0px;">A Fast and Light‑weight Point Set Registration Algorithm” </li>
+                  <li style="margin-bottom: 0px;"> <a href="https://ieeexplore.ieee.org/abstract/document/10256277">”GAFAR: Graph‑Attention Feature‑Augmentation for Registration <br> A Fast and Light‑weight Point Set Registration Algorithm” </li></a>
                   <li style="margin-bottom: 10px;">Authors: Ludwig Mohr, Ismail Geles, Friedrich Fraundorfer </li>            
                 </ul>
               </td>
@@ -169,9 +168,7 @@
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://drive.google.com/file/d/15mwJQUpOGvbFMhiFAoKthQdF5CJepnkr/view">
                 <papertitle> Point Cloud Registration with Graph Attention Networks </papertitle>
-              </a>
               <br>
               <!-- strong>Ismail Geles</strong -->
               <br>
