--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <heading>Papers</heading>
                 <ul style="list-style-type: none;">
                   <li style="margin-bottom: 0px;"><span class="fas"><i class="fas fa-scroll"></i></span> IROS’23 </li>
-                  <li style="margin-bottom: 0px;"> <a href="https://arxiv.org/abs/2307.15581">”Learning to Open Doors with Physically Interacting Aerial Manipulators”</a> </li>
+                  <li style="margin-bottom: 0px;"> <a href="https://ieeexplore.ieee.org/abstract/document/10342289">”Learning to Open Doors with Physically Interacting Aerial Manipulators”</a> </li>
                   <li style="margin-bottom: 10px;">Authors: Eugenio Cuniato, Ismail Geles, Weixuan Zhang, Olov Andersson, Marco Tognon, Roland Siegwart </li>            
                   <li style="margin-bottom: 0px;"><span class="fas"><i class="fas fa-scroll"></i></span> ECMR’23 </li>
                   <li style="margin-bottom: 0px;"> <a href="https://ieeexplore.ieee.org/abstract/document/10256277">”GAFAR: Graph‑Attention Feature‑Augmentation for Registration <br> A Fast and Light‑weight Point Set Registration Algorithm” </li></a>
