--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                     <!-- <a href="https://scholar.google.com/citations?user=xxx=en">Google Scholar</a> &nbsp/&nbsp -->
                     <!-- <a href="https://twitter.com/x">Twitter</a> &nbsp/&nbsp -->
                     <a href="https://github.com/isgeles/">Github</a> &nbsp/&nbsp
-                    <a href="https://www.linkedin.com/in/ismail-geles/">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/ismail-geles/">LinkedIn</a> &nbsp/&nbsp
+                    <a href="https://scholar.google.com/citations?user=kIpxj_YAAAAJ&hl=en/">Google Scholar</a>
                   </p>
                 </td>
                 <td style="padding:2.5%;width:40%;max-width:40%">
