--- a/index.html
+++ b/index.html
@@ -121,24 +121,51 @@
                   <!-- <heading>Publications & Preprints</heading> -->
                   <heading>Papers</heading>
                   <ul style="list-style-type: none;">
+                    <li style="margin-bottom: 0px;"><span class="fas"><i class="fas fa-scroll"></i></span> arXiv
+                      preprint </li>
+                    <li style="margin-bottom: 0px;"> <a href="https://arxiv.org/abs/2501.14377">
+                        ”Dream to Fly: Model-Based Reinforcement Learning for Vision-Based Drone Flight”</a> </li>
+                    <li style="margin-bottom: 10px;">Angel Romero*, Ashwin Shenai*, <b>Ismail Geles</b>, Elie
+                      Aljalbout, Davide Scaramuzza
+                    </li>
+
+                    <li style="margin-bottom: 0px;"><span class="fas"><i class="fas fa-scroll"></i></span> RAS’25 </li>
+                    <li style="margin-bottom: 0px;"> <a
+                        href="hhttps://www.sciencedirect.com/science/article/pii/S0921889024002549">
+                        ”GAFAR revisited—Exploring the limits of point cloud registration on sparse subsets”</a> </li>
+                    <li style="margin-bottom: 10px;">Ludwig Mohr, <b>Ismail Geles</b>, Friedrich Fraundorfer
+                    </li>
+
+
+                    <li style="margin-bottom: 0px;"><span class="fas"><i class="fas fa-scroll"></i></span> RAL’24 </li>
+                    <li style="margin-bottom: 0px;"> <a href="https://ieeexplore.ieee.org/abstract/document/10812062">
+                        ”Multi-Task Reinforcement Learning for Quadrotors”</a> </li>
+                    <li style="margin-bottom: 10px;">Jiaxu Xing, <b>Ismail Geles</b>, Yunlong Song, Elie Aljalbout,
+                      Davide Scaramuzza
+                    </li>
+
                     <li style="margin-bottom: 0px;"><span class="fas"><i class="fas fa-scroll"></i></span> RSS’24 </li>
                     <li style="margin-bottom: 0px;"> <a href="https://arxiv.org/abs/2406.12505">”Demonstrating Agile
                         Flight from Pixels without State Estimation”</a> </li>
-                    <li style="margin-bottom: 10px;">Authors: Ismail Geles, Leonard Bauersfeld, Angel Romero, Jiaxu
+                    <li style="margin-bottom: 10px;"><b>Ismail Geles</b>*, Leonard Bauersfeld*, Angel Romero, Jiaxu
                       Xing, Davide Scaramuzza
                     </li>
+
                     <li style="margin-bottom: 0px;"><span class="fas"><i class="fas fa-scroll"></i></span> IROS’23 </li>
                     <li style="margin-bottom: 0px;"> <a
                         href="https://ieeexplore.ieee.org/abstract/document/10342289">”Learning to Open Doors with
                         Physically Interacting Aerial Manipulators”</a> </li>
-                    <li style="margin-bottom: 10px;">Authors: Eugenio Cuniato, Ismail Geles, Weixuan Zhang, Olov
-                      Andersson, Marco Tognon, Roland Siegwart </li>
+                    <li style="margin-bottom: 10px;">Eugenio Cuniato, <b>Ismail Geles</b>, Weixuan Zhang, Olov
+                      Andersson, Marco Tognon, Roland Siegwart
+                    </li>
+
                     <li style="margin-bottom: 0px;"><span class="fas"><i class="fas fa-scroll"></i></span> ECMR’23 </li>
                     <li style="margin-bottom: 0px;"> <a
                         href="https://ieeexplore.ieee.org/abstract/document/10256277">”GAFAR: Graph‑Attention
                         Feature‑Augmentation for Registration <br> A Fast and Light‑weight Point Set Registration
                         Algorithm” </li></a>
-                    <li style="margin-bottom: 10px;">Authors: Ludwig Mohr, Ismail Geles, Friedrich Fraundorfer </li>
+                    <li style="margin-bottom: 10px;">Ludwig Mohr, <b>Ismail Geles</b>, Friedrich Fraundorfer
+                    </li>
                   </ul>
                 </td>
               </tr>
